# pin-------

./: .gitignore  CMakeLists.txt  README.md  publish.bat  项目复盘总结.md
DeskPins/: DeskPins.csproj  DllInjector.cs  NativeMethods.cs  PinController.cs  PinnedWindowTracker.cs  Program.cs  TrayManager.cs
HookDLL/: CMakeLists.txt  dllmain.cpp
assets/: pin.cur
dll/: CMakeLists.txt  dllmain.cpp  titlebarpainter.cpp  titlebarpainter.h
docs/superpowers/plans/: 2026-05-29-deskpins-clone-plan.md  2026-05-30-deskpins-clone-plan.md
docs/superpowers/specs/: 2026-05-29-deskpins-clone-design.md  2026-05-30-deskpins-clone-design.md
src/: CMakeLists.txt  dllinjector.cpp  dllinjector.h  main.cpp  pincontroller.cpp  pincontroller.h  proclist.cpp  proclist.h  resource.rc  traymanager.cpp  traymanager.h  version.h
